@@ -2780,6 +2780,20 @@ $Id$
             <translation lang="en">figure</translation>
         </rule>
     </rulegroup>
+    <rulegroup id="FINNISH">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">finnish</token>
+            </pattern>
+            <translation lang="ru">финский</translation> 
+        </rule>
+        <rule>
+            <pattern lang="ru">
+                <token inflected="yes">финиш</token>
+            </pattern>
+            <translation lang="en">finish</translation>
+        </rule>   
+    </rulegroup> 
     <rulegroup id="FORM">
         <rule>
             <pattern lang="en">
@@ -3636,10 +3650,18 @@ $Id$
                 <token>lunatic</token>
             </pattern>
             <translation lang="pl">obłąkany</translation>
+            <translation lang="ru">сумасшедший</translation>
         </rule>
         <rule>
             <pattern lang="pl">
                 <token inflected="yes">lunatyk</token>
+            </pattern>
+            <translation lang="en">sleepwalker</translation>
+            <translation lang="en">somnambulist</translation>
+        </rule>
+        <rule>
+            <pattern lang="ru">
+                <token inflected="yes">лунатик</token>
             </pattern>
             <translation lang="en">sleepwalker</translation>
             <translation lang="en">somnambulist</translation>
@@ -3654,6 +3676,8 @@ $Id$
             <translation lang="nl">magazijn</translation>
             <translation lang="nl">opslag</translation>
             <translation lang="nl">tijdschrift</translation>
+            <translation lang="ru">журнал</translation>
+            <translation lang="ru">патронтаж</translation>
         </rule>
         <rule>
             <pattern lang="it">
@@ -3661,6 +3685,13 @@ $Id$
             </pattern>
             <translation lang="fr">magasin</translation>
             <translation lang="en">warehouse</translation>
+        </rule>
+        <rule>
+            <pattern lang="ru">
+                <token>магазин</token>
+            </pattern>
+            <translation lang="en">shop</translation>
+            <translation lang="en">store</translation>
         </rule>
     </rulegroup>
     <rulegroup id="MANIFEST">
@@ -5734,6 +5765,37 @@ $Id$
             <translation lang="en">dissolute</translation>
         </rule>
     </rulegroup>
+    <rulegroup id="VINE">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">vine</token>
+            </pattern>
+            <translation lang="ru">лоза</translation> 
+        </rule>
+        <rule>
+            <pattern lang="ru">
+                <token inflected="yes">вино</token>
+            </pattern>
+            <translation lang="en">wine</translation>
+        </rule>   
+    </rulegroup>
+ <rulegroup id="WALLET">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">wallet</token>
+            </pattern>
+            <translation lang="ru">кошелёк</translation> 
+            <translation lang="ru">бумажник</translation>
+            <translation lang="ru">портмоне</translation>
+        </rule>
+        <rule>
+            <pattern lang="ru">
+                <token inflected="yes">валет</token>
+            </pattern>
+            <translation lang="en">jack</translation>
+            <translation lang="en">knave</translation>
+        </rule>   
+    </rulegroup>
     <rulegroup id="WAGON">
         <rule>
             <pattern lang="en">
@@ -5742,6 +5804,9 @@ $Id$
             <translation lang="pl">wóz</translation>
             <translation lang="gl">carro</translation>
             <translation lang="gl">carreta</translation>
+            <translation lang="gl">carreta</translation>
+            <translation lang="ru">телега</translation> 
+            <translation lang="ru">тележка</translation>
         </rule>
         <rule>
             <pattern lang="pl">
@@ -5758,6 +5823,14 @@ $Id$
             <translation lang="en">railway car</translation>
             <translation lang="en">couch</translation>
         </rule>
+         <rule>
+            <pattern lang="ru">
+                <token inflected="yes">вагон</token>
+            </pattern>
+            <translation lang="en">carriage</translation>
+            <translation lang="en">car</translation>
+            <translation lang="en">railway carriage</translation>
+        </rule>
     </rulegroup>
     <rulegroup id="WAREHOUSE">
         <rule>
@@ -5772,6 +5845,22 @@ $Id$
             </pattern>
             <translation lang="en">department store</translation>
         </rule>
+    </rulegroup>
+     <rulegroup id="ZEPHYR">
+        <rule>
+            <pattern lang="en">
+                <token inflected="yes">zephyr</token>
+            </pattern>
+            <translation lang="ru">ветерок</translation> 
+            <translation lang="ru">ткань</translation>
+   <!--     <translation lang="ru">зефир</translation> зефир(ветер) -->
+        </rule>
+        <rule>
+            <pattern lang="ru">
+                <token inflected="yes">зефир</token>
+            </pattern>
+            <translation lang="en">marshmallow</translation>
+        </rule>   
     </rulegroup>
     <rulegroup id="CONCERN">
         <rule>
