@@ -49,6 +49,7 @@ LanguageTool Change Log
 -Russian:
     -added a few rules
     -added some new rules, thanks to Julia Semenenko from WebSpellChecker.net
+    -added many false frends rules (Russian/English)
     
 -Slovenian:
     -fixed sentence detection so that sentences that begin with a lowercase
